--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,6 +23,7 @@ steps:
       - gcr.io/$PROJECT_ID/firebase:latest
 
   - id: build sitegen
+    waitFor: ["-"]
     # waitFor: ["warm sitegen cache"]
     name: gcr.io/cloud-builders/docker:latest
     args:
