--- a/cloudbuild.sitegen.yaml
+++ b/cloudbuild.sitegen.yaml
@@ -7,6 +7,7 @@ substitutions:
   _IMG: com-seankhliao-sitegen
 images:
   - gcr.io/$PROJECT_ID/$_IMG:$SHORT_SHA
+  - gcr.io/$PROJECT_ID/$_IMG:$TAG_NAME
   - gcr.io/$PROJECT_ID/$_IMG:latest
 
 steps:
@@ -16,6 +17,7 @@ steps:
       - build
       - --cache-from=gcr.io/$PROJECT_ID/$_IMG:latest
       - -t=gcr.io/$PROJECT_ID/$_IMG:$SHORT_SHA
+      - -t=gcr.io/$PROJECT_ID/$_IMG:$TAG_NAME
       - -t=gcr.io/$PROJECT_ID/$_IMG:latest
       - .
   - id: sitegen
