--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "cleanUrls": true,
-    "trailingSlash": false,
+    "trailingSlash": true,
     "public": "dst/",
     "headers": [
       {
