--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,5 +6,14 @@ substitutions:
   _IMG: com-seankhliao-sitegen
 
 steps:
+  - name: gcr.io/cloud-builders/gcloud
+    args:
+      - kms
+      - decrypt
+      - --ciphertext-file=sxg.key.enc
+      - --plaintext-file=sxg.key
+      - --location=global
+      - --keyring=cloudbuilder
+      - --key=default
   - id: sitegen
     name: gcr.io/$PROJECT_ID/$_IMG:latest
