--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,34 @@
 {
   "hosting": {
+    "public": "dst/",
     "cleanUrls": true,
     "trailingSlash": true,
-    "public": "dst/",
     "headers": [
       {
-        "source": "**/*.@(ttf|woff|css)",
-        "headers": [{ "key": "Cache-Control", "value": "max-age=31536000" }]
+        "source": "/icon-*.png",
+        "headers": [{ "key": "Cache-Control", "value": "max-age=2592000" }]
       },
       {
-        "source": "**/*.@(webp|png|ico)",
-        "headers": [{ "key": "Cache-Control", "value": "max-age=2592000" }]
+        "source": "**/cert.cbor",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/cert-chain+cbor"
+          }
+        ]
+      },
+      {
+        "source": "**/*.sxg",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/signed-exchange;v=b3"
+          },
+          {
+            "key": "X-Content-Type-Options",
+            "value": "nosniff"
+          }
+        ]
       },
       {
         "source": "/blog",
