--- a/firebase.json
+++ b/firebase.json
@@ -31,7 +31,7 @@
         ]
       },
       {
-        "source": "/blog",
+        "source": "/(blog|newtab)/?",
         "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
       },
       {
