move image generation locally

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dst/",
+    "public": "public/",
     "cleanUrls": true,
     "trailingSlash": true,
     "headers": [
@@ -8,7 +8,7 @@
         "source": "*",
         "headers": [
           {
-            "key": "Conetent-Security-Policy",
+            "key": "Content-Security-Policy",
             "value": "default-src 'self'; style-src 'unsafe-inline'; script-src-elem  'unsafe-inline' https://www.google-analytics.com; font-src 'self' https://fonts.gstatic.com; connect-src https://*.seankhliao.com https://www.google-analytics.com; img-src *; report-uri https://statslogger.seankhliao.com/json"
           }
         ]
