firebase flags are weird

--- a/cloudbuild.sitegen.yaml
+++ b/cloudbuild.sitegen.yaml
@@ -9,5 +9,6 @@ steps:
   - id: upload
     name: seankhliao/ci-firebase
     args:
-      - -P=com-seankhliao
+      - -P
+      - com-seankhliao
       - deploy
