--- a/cloudbuild.sitegen.yaml
+++ b/cloudbuild.sitegen.yaml
@@ -3,22 +3,12 @@ tags:
   - $SHORT_SHA
   - com-seankhliao
   - com-seankhliao-sitegen
-substitutions:
-  _IMG: com-seankhliao-sitegen
-images:
-  - gcr.io/$PROJECT_ID/$_IMG:$SHORT_SHA
-  - gcr.io/$PROJECT_ID/$_IMG:$TAG_NAME
-  - gcr.io/$PROJECT_ID/$_IMG:latest
-
 steps:
-  - id: build sitegen
-    name: gcr.io/cloud-builders/docker:latest
+  - id: generate
+    name: seankhliao/webstyle:latest
+  - id: upload
+    name: seankhliao/ci-firebase
     args:
-      - build
-      - --cache-from=gcr.io/$PROJECT_ID/$_IMG:latest
-      - -t=gcr.io/$PROJECT_ID/$_IMG:$SHORT_SHA
-      - -t=gcr.io/$PROJECT_ID/$_IMG:$TAG_NAME
-      - -t=gcr.io/$PROJECT_ID/$_IMG:latest
-      - .
-  - id: sitegen
-    name: gcr.io/$PROJECT_ID/$_IMG:latest
+      - -P
+      - com-seankhliao
+      - deploy
