--- a/firebase.json
+++ b/firebase.json
@@ -69,6 +69,11 @@
         "type": 302
       },
       {
+        "source": "/l/gh/cs/",
+        "destination": "/?utm_source=github&utm_medium=repo&utm_campaign=com-seankhliao",
+        "type": 302
+      },
+      {
         "source": "/l/ig/",
         "destination": "/?utm_source=instagram&utm_medium=profile&utm_campaign=profile",
         "type": 302
