--- a/firebase.json
+++ b/firebase.json
@@ -22,7 +22,7 @@
           },
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self';upgrade-insecure-requests;connect-src https://statslogger.seankhliao.com https://www.google-analytics.com;font-src https://static.seankhliao.com;img-src *;object-src 'none';script-src-elem 'nonce-deadbeef2' 'nonce-deadbeef3'  https://www.google-analytics.com https://ssl.google-analytics.com https://www.googletagmanager.com;sandbox allow-scripts;style-src-elem 'nonce-deadbeef1' https://static.seankhliao.com;report-to: csp-endpoint;report-uri https://statslogger.seankhliao.com/json"
+            "value": "default-src 'self';upgrade-insecure-requests;connect-src https://statslogger.seankhliao.com https://www.google-analytics.com;font-src https://static.seankhliao.com;img-src *;object-src 'none';script-src-elem 'nonce-deadbeef2' 'nonce-deadbeef3' 'nonce-deadbeef4' https://static.seankhliao.com https://www.google-analytics.com https://ssl.google-analytics.com https://www.googletagmanager.com;sandbox allow-scripts;style-src-elem 'nonce-deadbeef1' https://static.seankhliao.com;report-to: csp-endpoint;report-uri https://statslogger.seankhliao.com/json"
           },
           {
             "key": "Feature-Policy",
