--- a/firebase.json
+++ b/firebase.json
@@ -48,7 +48,12 @@
       },
       {
         "source": "/",
-        "headers": [{ "key": "Link", "value": "</map.webp>; rel=preload; as=image" }]
+        "headers": [
+          {
+            "key": "Link",
+            "value": "</map.webp>; rel=preload; as=image, <https://static.seankhliao.com/base.css>; rel=preload; as=style; crossorigin, <https://static.seankhliao.com/web-vitals-module-v0.2.2.js>; rel=preload; crpssorigin; as=script, <https://www.google-analytics.com>; rel=preconnect, <https://www.googletagmanager.com>; rel=preconnect"
+          }
+        ]
       }
     ],
     "redirects": [
