--- a/firebase.json
+++ b/firebase.json
@@ -8,14 +8,8 @@
       {
         "source": "*",
         "headers": [
-          {
-            "key": "Strict-Transport-Security",
-            "value": "max-age=63072000; preload"
-          },
-          {
-            "key": "Referrer-Policy",
-            "value": "strict-origin-when-cross-origin"
-          },
+          { "key": "Strict-Transport-Security", "value": "max-age=63072000; preload" },
+          { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
           {
             "key": "Report-To",
             "value": "{\"group\": \"csp-endpoint\", \"max_age\": 10886400, \"endpoints\": [{\"url\":\"https://statslogger.seankhliao.com/json\"}]}"
@@ -31,10 +25,6 @@
         ]
       },
       {
-        "source": "/icon-*.png",
-        "headers": [{ "key": "Cache-Control", "value": "max-age=2592000" }]
-      },
-      {
         "source": "/blog/",
         "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
       },
@@ -44,12 +34,29 @@
       },
       {
         "source": "/",
+        "headers": [{ "key": "Link", "value": "</map.webp>; rel=preload; as=image" }]
+      },
+      {
+        "source": "base.css",
         "headers": [
           {
             "key": "Link",
-            "value": "</map.webp>; rel=preload; as=image"
+            "value": "</inconsolata-var.woff2>; rel=preload; as=font; type=font/woff2; crossorigin, </lora-var.woff2>; rel=preload; as=font; type=font/woff2; crossorigin"
           }
         ]
+      },
+      {
+        "source": "**/*.@(eot|otf|ttf|ttc|woff|woff2|font.css)",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "*" },
+          { "key": "Access-Control-Allow-Methods", "value": "OPTIONS, GET" },
+          { "key": "Access-Control-Max-Age", "value": "2592000" },
+          { "key": "Cache-Control", "value": "max-age=2592000" }
+        ]
+      },
+      {
+        "source": "/icon-*.png",
+        "headers": [{ "key": "Cache-Control", "value": "max-age=2592000" }]
       }
     ],
     "redirects": [
