--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,37 +8,37 @@
   "theme_color": "#000",
   "icons": [
     {
-      "src": "https://static.seankhliao.com/icon-512.png",
+      "src": "https://seankhliao.com/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "https://static.seankhliao.com/icon-192.png",
+      "src": "https://seankhliao.com/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "https://static.seankhliao.com/icon-128.png",
+      "src": "https://seankhliao.com/icon-128.png",
       "type": "image/png",
       "sizes": "128x128"
     },
     {
-      "src": "https://static.seankhliao.com/icon-64.png",
+      "src": "https://seankhliao.com/icon-64.png",
       "type": "image/png",
       "sizes": "64x64"
     },
     {
-      "src": "https://static.seankhliao.com/icon-48.png",
+      "src": "https://seankhliao.com/icon-48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
     {
-      "src": "https://static.seankhliao.com/icon-32.png",
+      "src": "https://seankhliao.com/icon-32.png",
       "type": "image/png",
       "sizes": "32x32"
     },
     {
-      "src": "https://static.seankhliao.com/icon-16.png",
+      "src": "https://seankhliao.com/icon-16.png",
       "type": "image/png",
       "sizes": "16x16"
     }
