--- a/firebase.json
+++ b/firebase.json
@@ -96,6 +96,11 @@
         "type": 302
       },
       {
+        "source": "/gh1",
+        "destination": "/?utm_source=github&utm_medium=profile&utm_campaign=readme",
+        "type": 302
+      },
+      {
         "source": "/i",
         "destination": "/?utm_source=instagram&utm_medium=profile&utm_campaign=profile",
         "type": 302
