web vitals cors

--- a/firebase.json
+++ b/firebase.json
@@ -55,7 +55,7 @@
         ]
       },
       {
-        "source": "**/*.@(css|png|webp|json)",
+        "source": "**/*.@(css|png|webp|json|js)",
         "headers": [
           { "key": "Access-Control-Allow-Origin", "value": "*" },
           { "key": "Access-Control-Allow-Methods", "value": "OPTIONS, GET" },
@@ -68,11 +68,6 @@
       {
         "source": "/c0",
         "destination": "/blog/?utm_source=cv&utm_medium=link&utm_campaign=projects",
-        "type": 302
-      },
-      {
-        "source": "/{feed,feed.rss,atom,rss}",
-        "destination": "/feed.atom",
         "type": 302
       },
       {
