--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,8 +20,9 @@ steps:
     args:
       - -c
       - |
+        set -ex; \
         sed -i 's/# newTag: IMAGE_TAG/newTag: $SHORT_SHA/' k8s/kustomization.yaml && \
-        kubectl apply -k k8s
+        kubectl apply -k ./k8s
     env:
       - CLOUDSDK_COMPUTE_ZONE=us-central1-c
       - CLOUDSDK_CONTAINER_CLUSTER=cluster23
