--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -37,11 +37,11 @@ spec:
               containerPort: 8000
           livenessProbe:
             httpGet:
-              path: /health
+              path: /liveliness
               port: 8000
           readinessProbe:
             httpGet:
-              path: /health
+              path: /readiness
               port: 8000
           volumeMounts:
             - name: certs
