update tracing name

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -35,6 +35,9 @@ spec:
               containerPort: 8080
             - name: metric
               containerPort: 8000
+          env:
+            - name: JAEGER_SERVICE_NAME
+              value: com-seankhliao
           livenessProbe:
             httpGet:
               path: /liveness
