--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - service.yaml
-  - deployment.yaml
+  - cert.yaml
+  - deployment.k8s.yaml
+  - service.k8s.yaml
 images:
   - name: us.gcr.io/com-seankhliao/com-seankhliao
     # newTag: IMAGE_TAG
