--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,9 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+commonLabels:
+  app.kubernetes.io/name: com-seankhliao
+  app.kubernetes.io/managed-by: kustomize
+namespace: apps
 resources:
   - cert.yaml
   - deployment.k8s.yaml
   - service.k8s.yaml
 images:
   - name: us.gcr.io/com-seankhliao/com-seankhliao
+    newName: seankhliao/com-seankhliao
     # newTag: IMAGE_TAG
