--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 substitutions:
   _IMG: com-seankhliao
-  _REG: reg.seankhliao.com
+  _REG: us.gcr.io/com-seankhliao
 
 tags:
   - $SHORT_SHA
@@ -16,42 +16,40 @@ steps:
     env:
       - CGO_ENABLED=0
 
-  - id: login
-    waitFor:
-      - "-"
-    name: gcr.io/cloud-builders/gcloud:latest
-    entrypoint: bash
-    args:
-      - -c
-      - |
-        gcloud secrets versions access latest \
-          --secret=docker-registry-creds \
-          --format='get(payload.data)' \
-          | tr '_-' '/+' \
-          | base64 -d > /kaniko/.docker/config.json \
-        && \
-        gcloud secrets versions access latest \
-          --secret=cluster-kubectl-creds \
-          --format='get(payload.data)' \
-          | tr '_-' '/+' \
-          | base64 -d > /kube/config \
-        && \
-        gcloud secrets versions access latest \
-          --secret=github-personal-repo-token \
-          --format='get(payload.data)' \
-          | tr '_-' '/+' \
-          | base64 -d > /github/token
-    volumes:
-      - name: registry-creds
-        path: /kaniko/.docker
-      - name: cluster-creds
-        path: /kube
-      - name: github-creds
-        path: /github
+  # - id: login
+  #   waitFor:
+  #     - "-"
+  #   name: gcr.io/cloud-builders/gcloud:latest
+  #   entrypoint: bash
+  #   args:
+  #     - -c
+  #     - |
+  #       gcloud secrets versions access latest \
+  #         --secret=docker-registry-creds \
+  #         --format='get(payload.data)' \
+  #         | tr '_-' '/+' \
+  #         | base64 -d > /kaniko/.docker/config.json \
+  #       && \
+  #       gcloud secrets versions access latest \
+  #         --secret=cluster-kubectl-creds \
+  #         --format='get(payload.data)' \
+  #         | tr '_-' '/+' \
+  #         | base64 -d > /kube/config \
+  #       && \
+  #       gcloud secrets versions access latest \
+  #         --secret=github-personal-repo-token \
+  #         --format='get(payload.data)' \
+  #         | tr '_-' '/+' \
+  #         | base64 -d > /github/token
+  #   volumes:
+  #     - name: registry-creds
+  #       path: /kaniko/.docker
+  #     - name: cluster-creds
+  #       path: /kube
+  #     - name: github-creds
+  #       path: /github
 
   - id: build-push
-    waitFor:
-      - "login"
     name: gcr.io/kaniko-project/executor:latest
     args:
       - -c=.
@@ -62,45 +60,45 @@ steps:
       - --single-snapshot
       - --cache=true
       - --use-new-run
-    volumes:
-      - name: registry-creds
-        path: /kaniko/.docker
+    # volumes:
+    #   - name: registry-creds
+    #     path: /kaniko/.docker
 
-  - id: deploy
-    name: gcr.io/cloud-builders/kubectl:latest
-    entrypoint: /bin/sh
-    args:
-      - -c
-      - |
-        set -ex; \
-        cd k8s && \
-        sed -i 's/# newTag: IMAGE_TAG/newTag: "$SHORT_SHA"/' kustomization.yaml && \
-        kubectl.1.18 kustomize | tee /deployed/$_IMG.yaml | kubectl.1.18 apply -f -
-    env:
-      - KUBECONFIG=/kube/config
-    volumes:
-      - name: cluster-creds
-        path: /kube
-      - name: deployed
-        path: /deployed
-
-  - id: save-deployment
-    name: gcr.io/cloud-builders/gcloud:latest
-    entrypoint: bash
-    args:
-      - -c
-      - |
-        set -ex; \
-        export GITHUB_TOKEN=$$(cat /github/token)
-        git clone https://x-access-token:$$GITHUB_TOKEN@github.com/seankhliao/kluster && \
-        cd kluster/apps && \
-        cp /deployed/$_IMG.yaml $_IMG.k8s.yaml && \
-        git add $_IMG.k8s.yaml && \
-        git config user.email $(gcloud auth list --filter=status:ACTIVE --format='value(account)') && \
-        git commit -m "update $_IMG deployment to $SHORT_SHA" && \
-        git push
-    volumes:
-      - name: github-creds
-        path: /github
-      - name: deployed
-        path: /deployed
+  # - id: deploy
+  #   name: gcr.io/cloud-builders/kubectl:latest
+  #   entrypoint: /bin/sh
+  #   args:
+  #     - -c
+  #     - |
+  #       set -ex; \
+  #       cd k8s && \
+  #       sed -i 's/# newTag: IMAGE_TAG/newTag: "$SHORT_SHA"/' kustomization.yaml && \
+  #       kubectl.1.18 kustomize | tee /deployed/$_IMG.yaml | kubectl.1.18 apply -f -
+  #   env:
+  #     - KUBECONFIG=/kube/config
+  #   volumes:
+  #     - name: cluster-creds
+  #       path: /kube
+  #     - name: deployed
+  #       path: /deployed
+  #
+  # - id: save-deployment
+  #   name: gcr.io/cloud-builders/gcloud:latest
+  #   entrypoint: bash
+  #   args:
+  #     - -c
+  #     - |
+  #       set -ex; \
+  #       export GITHUB_TOKEN=$$(cat /github/token)
+  #       git clone https://x-access-token:$$GITHUB_TOKEN@github.com/seankhliao/kluster && \
+  #       cd kluster/apps && \
+  #       cp /deployed/$_IMG.yaml $_IMG.k8s.yaml && \
+  #       git add $_IMG.k8s.yaml && \
+  #       git config user.email $(gcloud auth list --filter=status:ACTIVE --format='value(account)') && \
+  #       git commit -m "update $_IMG deployment to $SHORT_SHA" && \
+  #       git push
+  #   volumes:
+  #     - name: github-creds
+  #       path: /github
+  #     - name: deployed
+  #       path: /deployed
